# store-p11

./: .dockerignore  .env.example  .gitignore  .joi.env.example  Dockerfile  README.md  convert_sql_to_fixtures.py  data_seeding.sql  database.sql  docker-compose.yml  docker-entrypoint.sh  joi  joi.bat  load_data.py  manage.py  pyproject.toml  requirements.txt  seed_db.py  start.bat  start.sh
.github/workflows/: ci-cd.yml
apps/cart/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
apps/core/: admin.py  apps.py  models.py  urls.py  views.py
apps/orders/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/products/: admin.py  apps.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
cart/: context_processors.py  views.py
fixtures/: auth_user.json  cart_cart.json  cart_cartitem.json  orders_order.json  orders_orderitem.json  products_brand.json  products_category.json  products_product.json  products_product_tags.json  products_review.json  products_tag.json  products_wishlist.json  users_address.json  users_profile.json
nginx/: nginx.conf
orders/: views.py
products/: admin.py  urls.py  views.py
shop/: middleware.py  settings.py  urls.py
static/css/: components.css  orders.css  profile.css  style.css
static/js/: main.js  tabs.js
templates/components/: auth_modal.html  cart_footer.html  cart_items.html  footer.html  navbar.html
templates/orders/: checkout.html  order_detail.html  (+2 more)
users/: models.py  views.py
(+43 files in other folders)
