[project]
name = "smart-s3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-bootstrap-icons>=0.9.0",
    "django-bootstrap5>=26.2",
    "django-browser-reload>=1.21.0",
    "django-cotton>=2.6.2",
    "django-jazzmin==3.0.4",
    "django-spa>=0.3.6",
    "django-triggers>=2.1.5",
    "nox>=2026.2.9",
    "pillow>=12.1.1",
    "ruff>=0.15.6",
    "uvicorn>=0.42.0",
]
